--- a/Jupyter Notebooks/Untitled.ipynb
+++ b/Jupyter Notebooks/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "id": "62e356fc",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JSON file saved successfully at: /Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/forest_of_blocks.json\n"
+      "JSON file saved successfully at: /Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/canon.json\n"
      ]
     }
    ],
@@ -71,10 +71,11 @@
     "    \n",
     "    return json.dumps(output, indent=4)\n",
     "\n",
+    "filename = \"canon\"\n",
     "# Use the function with your audio path\n",
-    "audio_path = \"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/audio/forestofblocks.mp3\"\n",
+    "audio_path = f\"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/audio/{filename}.mp3\"\n",
     "# Save or print the JSON output\n",
-    "file_path = \"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/forest_of_blocks.json\"\n",
+    "file_path = f\"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/{filename}.json\"\n",
     "\n",
     "# Save the dictionary as JSON\n",
     "features_json = extract_features(audio_path)\n",
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "5ced1355",
    "metadata": {
     "scrolled": true
@@ -146,7 +147,7 @@
     "    return data\n",
     "\n",
     "\n",
-    "file_path = \"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/forest_of_blocks.json\"\n",
+    "\n",
     "try:\n",
     "    with open(file_path, \"r\") as json_file:\n",
     "        data = json.load(json_file)\n",
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9da494e5",
    "metadata": {},
    "outputs": [
@@ -172,15 +173,15 @@
      "output_type": "stream",
      "text": [
       "Unique Value Counts: {\n",
-      "    \"time\": 1474,\n",
+      "    \"time\": 3412,\n",
       "    \"sub_bass\": 71,\n",
       "    \"note_onset\": 2,\n",
-      "    \"bass\": 84,\n",
-      "    \"lower_midrange\": 82,\n",
-      "    \"midrange\": 87,\n",
-      "    \"higher_midrange\": 87,\n",
-      "    \"presence\": 66,\n",
-      "    \"brilliance\": 1\n",
+      "    \"bass\": 94,\n",
+      "    \"lower_midrange\": 85,\n",
+      "    \"midrange\": 80,\n",
+      "    \"higher_midrange\": 78,\n",
+      "    \"presence\": 72,\n",
+      "    \"brilliance\": 2\n",
       "}\n",
       "Modes (with count of occurrence for non-zero values): {\n",
       "    \"time\": {\n",
@@ -188,36 +189,36 @@
       "        \"count\": 1\n",
       "    },\n",
       "    \"sub_bass\": {\n",
-      "        \"mode\": 0.04,\n",
-      "        \"count\": 99\n",
+      "        \"mode\": 0.01,\n",
+      "        \"count\": 403\n",
       "    },\n",
       "    \"note_onset\": {\n",
       "        \"mode\": 1,\n",
-      "        \"count\": 132\n",
+      "        \"count\": 407\n",
       "    },\n",
       "    \"bass\": {\n",
-      "        \"mode\": 0.02,\n",
-      "        \"count\": 64\n",
+      "        \"mode\": 0.14,\n",
+      "        \"count\": 125\n",
       "    },\n",
       "    \"lower_midrange\": {\n",
-      "        \"mode\": 0.18,\n",
-      "        \"count\": 54\n",
+      "        \"mode\": 0.08,\n",
+      "        \"count\": 128\n",
       "    },\n",
       "    \"midrange\": {\n",
-      "        \"mode\": 0.21,\n",
-      "        \"count\": 56\n",
+      "        \"mode\": 0.02,\n",
+      "        \"count\": 176\n",
       "    },\n",
       "    \"higher_midrange\": {\n",
-      "        \"mode\": 0.17,\n",
-      "        \"count\": 64\n",
+      "        \"mode\": 0.01,\n",
+      "        \"count\": 227\n",
       "    },\n",
       "    \"presence\": {\n",
-      "        \"mode\": 0.14,\n",
-      "        \"count\": 90\n",
+      "        \"mode\": 0.06,\n",
+      "        \"count\": 106\n",
       "    },\n",
       "    \"brilliance\": {\n",
-      "        \"mode\": null,\n",
-      "        \"count\": 0\n",
+      "        \"mode\": 1.0,\n",
+      "        \"count\": 1\n",
       "    }\n",
       "}\n",
       "Minimums: {\n",
@@ -232,7 +233,7 @@
       "    \"brilliance\": 0.0\n",
       "}\n",
       "Maximums: {\n",
-      "    \"time\": 73.65,\n",
+      "    \"time\": 170.55,\n",
       "    \"sub_bass\": 1.0,\n",
       "    \"note_onset\": 1,\n",
       "    \"bass\": 1.0,\n",
@@ -240,29 +241,29 @@
       "    \"midrange\": 1.0,\n",
       "    \"higher_midrange\": 1.0,\n",
       "    \"presence\": 1.0,\n",
-      "    \"brilliance\": 0.0\n",
+      "    \"brilliance\": 1.0\n",
       "}\n",
       "Averages: {\n",
-      "    \"time\": 36.85,\n",
-      "    \"sub_bass\": 0.1357935393258427,\n",
+      "    \"time\": 85.3,\n",
+      "    \"sub_bass\": 0.08044711378044711,\n",
       "    \"note_onset\": 1,\n",
-      "    \"bass\": 0.2276240391334731,\n",
-      "    \"lower_midrange\": 0.27166085136078155,\n",
-      "    \"midrange\": 0.29366620111731845,\n",
-      "    \"higher_midrange\": 0.25727464788732396,\n",
-      "    \"presence\": 0.18095238095238095,\n",
-      "    \"brilliance\": 0\n",
+      "    \"bass\": 0.23142724458204333,\n",
+      "    \"lower_midrange\": 0.19594661700806953,\n",
+      "    \"midrange\": 0.16811180124223601,\n",
+      "    \"higher_midrange\": 0.14111150950161347,\n",
+      "    \"presence\": 0.1737170474516696,\n",
+      "    \"brilliance\": 1.0\n",
       "}\n",
       "Medians: {\n",
-      "    \"time\": 36.85,\n",
-      "    \"sub_bass\": 0.1,\n",
-      "    \"note_onset\": 1.0,\n",
+      "    \"time\": 85.3,\n",
+      "    \"sub_bass\": 0.05,\n",
+      "    \"note_onset\": 1,\n",
       "    \"bass\": 0.19,\n",
-      "    \"lower_midrange\": 0.24,\n",
-      "    \"midrange\": 0.26,\n",
-      "    \"higher_midrange\": 0.22,\n",
-      "    \"presence\": 0.14,\n",
-      "    \"brilliance\": 0\n",
+      "    \"lower_midrange\": 0.17,\n",
+      "    \"midrange\": 0.12,\n",
+      "    \"higher_midrange\": 0.1,\n",
+      "    \"presence\": 0.13,\n",
+      "    \"brilliance\": 1.0\n",
       "}\n"
      ]
     }
@@ -309,7 +310,7 @@
     "    \n",
     "    return unique_values, unique_counts, modes, minimums, maximums, averages, medians\n",
     "\n",
-    "file_path = \"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/forest_of_blocks.json\"\n",
+    "\n",
     "unique_values, unique_counts, modes, minimums, maximums, averages, medians = analyze_data(file_path)\n",
     "print(\"Unique Value Counts:\", json.dumps(unique_counts, indent=4))\n",
     "print(\"Modes (with count of occurrence for non-zero values):\", json.dumps(modes, indent=4))\n",
