intermediate note onset songs

--- a/Jupyter Notebooks/NoteOnset.ipynb
+++ b/Jupyter Notebooks/NoteOnset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c26d2117",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note onsets saved successfully to /Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/vivalavida_onset.json\n"
+      "Starting the note onset detection process...\n",
+      "Checking if the audio file exists...\n",
+      "Loading audio file...\n",
+      "Audio file loaded successfully.\n",
+      "Detecting note onsets...\n",
+      "Note onsets detected successfully.\n",
+      "Saving note onsets to JSON file...\n",
+      "Note onsets saved successfully to /COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/waltzoftheflowers_onset.json\n",
+      "Note onsets saved successfully to /COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/waltzoftheflowers_onset.json\n"
      ]
     }
    ],
@@ -18,28 +26,49 @@
     "import librosa\n",
     "import numpy as np\n",
     "import json\n",
+    "import os\n",
     "\n",
     "def getNoteOnsets(audio_path, file_path):\n",
-    "    # Load the audio file\n",
-    "    y, sr = librosa.load(audio_path, sr=None)\n",
+    "    try:\n",
+    "        print(\"Starting the note onset detection process...\")\n",
+    "\n",
+    "        # Check if the audio file exists\n",
+    "        print(\"Checking if the audio file exists...\")\n",
+    "        if not os.path.isfile(audio_path):\n",
+    "            print(f\"Error: The specified audio file path does not exist: {audio_path}\")\n",
+    "            return\n",
+    "        \n",
+    "        # Load the audio file\n",
+    "        print(\"Loading audio file...\")\n",
+    "        y, sr = librosa.load(audio_path, sr=None)\n",
+    "        print(\"Audio file loaded successfully.\")\n",
+    "\n",
+    "        # Detect note onsets\n",
+    "        print(\"Detecting note onsets...\")\n",
+    "        onset_frames = librosa.onset.onset_detect(y=y, sr=sr)\n",
+    "        onset_times = librosa.frames_to_time(onset_frames, sr=sr)\n",
+    "        print(\"Note onsets detected successfully.\")\n",
+    "\n",
+    "        # Prepare the onset times for JSON serialization\n",
+    "        onset_data = {\"note_onsets\": onset_times.tolist()}\n",
+    "\n",
+    "        # Save the onset times to a JSON file\n",
+    "        print(\"Saving note onsets to JSON file...\")\n",
+    "        with open(file_path, \"w\") as outfile:\n",
+    "            json.dump(onset_data, outfile, indent=4)\n",
+    "        print(f\"Note onsets saved successfully to {file_path}\")\n",
+    "\n",
+    "        print(f\"Note onsets saved successfully to {file_path}\")\n",
     "    \n",
-    "    # Detect note onsets\n",
-    "    onset_frames = librosa.onset.onset_detect(y=y, sr=sr)\n",
-    "    onset_times = librosa.frames_to_time(onset_frames, sr=sr)\n",
-    "    \n",
-    "    # Prepare the onset times for JSON serialization\n",
-    "    onset_data = {\"note_onsets\": onset_times.tolist()}\n",
-    "    \n",
-    "    # Save the onset times to a JSON file\n",
-    "    with open(file_path, \"w\") as outfile:\n",
-    "        json.dump(onset_data, outfile, indent=4)\n",
-    "    \n",
-    "    print(f\"Note onsets saved successfully to {file_path}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"Error: The specified audio file path does not exist.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {type(e).__name__}: {e}\")\n",
     "\n",
     "# Define your filename, audio_path, and file_path\n",
-    "filename = \"vivalavida\"\n",
-    "audio_path = f\"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/audio/{filename}.mp3\"\n",
-    "file_path = f\"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/{filename}_onset.json\"\n",
+    "filename = \"waltzoftheflowers\"\n",
+    "audio_path = f\"/COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_flutter songs/{filename}.mp3\"\n",
+    "file_path = f\"/COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/{filename}_onset.json\"\n",
     "\n",
     "# Extract note onsets and save them to a file\n",
     "getNoteOnsets(audio_path, file_path)\n"
@@ -70,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
