--- a/Jupyter Notebooks/OG algo.ipynb
+++ b/Jupyter Notebooks/OG algo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "id": "62e356fc",
    "metadata": {
     "scrolled": true
@@ -12,7 +12,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JSON file saved successfully at: /Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/vivalavida.json\n"
+      "JSON file saved successfully at: /COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/waltzoftheflowers.json\n"
      ]
     }
    ],
@@ -73,11 +73,11 @@
     "    \n",
     "    return json.dumps(output, indent=4)\n",
     "\n",
-    "filename = \"vivalavida\"\n",
+    "filename = \"waltzoftheflowers\"\n",
     "# Use the function with your audio path\n",
-    "audio_path = f\"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/audio/{filename}.mp3\"\n",
+    "audio_path = f\"/COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_flutter songs/{filename}.mp3\"\n",
     "# Save or print the JSON output\n",
-    "file_path = f\"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/{filename}.json\"\n",
+    "file_path = f\"/COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/{filename}.json\"\n",
     "\n",
     "# Save the dictionary as JSON\n",
     "features_json = extract_features(audio_path)\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 35,
    "id": "5ced1355",
    "metadata": {
     "scrolled": true
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 36,
    "id": "9da494e5",
    "metadata": {},
    "outputs": [
@@ -175,15 +175,15 @@
      "output_type": "stream",
      "text": [
       "Unique Value Counts: {\n",
-      "    \"time\": 1211,\n",
-      "    \"sub_bass\": 76,\n",
-      "    \"note_onset\": 2,\n",
-      "    \"bass\": 89,\n",
-      "    \"lower_midrange\": 89,\n",
-      "    \"midrange\": 87,\n",
-      "    \"higher_midrange\": 79,\n",
-      "    \"presence\": 72,\n",
-      "    \"brilliance\": 74\n",
+      "    \"time\": 2414,\n",
+      "    \"sub_bass\": 63,\n",
+      "    \"note_onset\": 1,\n",
+      "    \"bass\": 87,\n",
+      "    \"lower_midrange\": 93,\n",
+      "    \"midrange\": 82,\n",
+      "    \"higher_midrange\": 80,\n",
+      "    \"presence\": 69,\n",
+      "    \"brilliance\": 44\n",
       "}\n",
       "Modes (with count of occurrence for non-zero values): {\n",
       "    \"time\": {\n",
@@ -191,36 +191,36 @@
       "        \"count\": 1\n",
       "    },\n",
       "    \"sub_bass\": {\n",
-      "        \"mode\": 0.01,\n",
-      "        \"count\": 102\n",
+      "        \"mode\": 0.05,\n",
+      "        \"count\": 244\n",
       "    },\n",
       "    \"note_onset\": {\n",
-      "        \"mode\": 1,\n",
-      "        \"count\": 406\n",
+      "        \"mode\": null,\n",
+      "        \"count\": 0\n",
       "    },\n",
       "    \"bass\": {\n",
-      "        \"mode\": 0.01,\n",
-      "        \"count\": 49\n",
+      "        \"mode\": 0.06,\n",
+      "        \"count\": 133\n",
       "    },\n",
       "    \"lower_midrange\": {\n",
-      "        \"mode\": 0.27,\n",
-      "        \"count\": 40\n",
+      "        \"mode\": 0.13,\n",
+      "        \"count\": 77\n",
       "    },\n",
       "    \"midrange\": {\n",
-      "        \"mode\": 0.29,\n",
-      "        \"count\": 35\n",
+      "        \"mode\": 0.05,\n",
+      "        \"count\": 115\n",
       "    },\n",
       "    \"higher_midrange\": {\n",
-      "        \"mode\": 0.25,\n",
-      "        \"count\": 48\n",
+      "        \"mode\": 0.01,\n",
+      "        \"count\": 463\n",
       "    },\n",
       "    \"presence\": {\n",
-      "        \"mode\": 0.09,\n",
-      "        \"count\": 65\n",
+      "        \"mode\": 0.01,\n",
+      "        \"count\": 225\n",
       "    },\n",
       "    \"brilliance\": {\n",
-      "        \"mode\": 0.11,\n",
-      "        \"count\": 97\n",
+      "        \"mode\": 0.2,\n",
+      "        \"count\": 8\n",
       "    }\n",
       "}\n",
       "Minimums: {\n",
@@ -235,9 +235,9 @@
       "    \"brilliance\": 0.0\n",
       "}\n",
       "Maximums: {\n",
-      "    \"time\": 242.0,\n",
+      "    \"time\": 482.6,\n",
       "    \"sub_bass\": 1.0,\n",
-      "    \"note_onset\": 1,\n",
+      "    \"note_onset\": 0,\n",
       "    \"bass\": 1.0,\n",
       "    \"lower_midrange\": 1.0,\n",
       "    \"midrange\": 1.0,\n",
@@ -246,26 +246,26 @@
       "    \"brilliance\": 1.0\n",
       "}\n",
       "Averages: {\n",
-      "    \"time\": 121.1,\n",
-      "    \"sub_bass\": 0.14481826654240448,\n",
-      "    \"note_onset\": 1,\n",
-      "    \"bass\": 0.3252251486830926,\n",
-      "    \"lower_midrange\": 0.34057356608478806,\n",
-      "    \"midrange\": 0.3346511627906977,\n",
-      "    \"higher_midrange\": 0.24184320266889076,\n",
-      "    \"presence\": 0.1569061707523246,\n",
-      "    \"brilliance\": 0.12905263157894736\n",
+      "    \"time\": 241.4,\n",
+      "    \"sub_bass\": 0.091090303786933,\n",
+      "    \"note_onset\": 0,\n",
+      "    \"bass\": 0.15782702237521515,\n",
+      "    \"lower_midrange\": 0.2574989366227137,\n",
+      "    \"midrange\": 0.18162940670679278,\n",
+      "    \"higher_midrange\": 0.10590114827758362,\n",
+      "    \"presence\": 0.09725293132328308,\n",
+      "    \"brilliance\": 0.3530973451327434\n",
       "}\n",
       "Medians: {\n",
-      "    \"time\": 121.1,\n",
-      "    \"sub_bass\": 0.1,\n",
-      "    \"note_onset\": 1.0,\n",
-      "    \"bass\": 0.32,\n",
-      "    \"lower_midrange\": 0.33,\n",
-      "    \"midrange\": 0.32,\n",
-      "    \"higher_midrange\": 0.23,\n",
-      "    \"presence\": 0.13,\n",
-      "    \"brilliance\": 0.1\n",
+      "    \"time\": 241.4,\n",
+      "    \"sub_bass\": 0.07,\n",
+      "    \"note_onset\": 0,\n",
+      "    \"bass\": 0.11,\n",
+      "    \"lower_midrange\": 0.21,\n",
+      "    \"midrange\": 0.14,\n",
+      "    \"higher_midrange\": 0.05,\n",
+      "    \"presence\": 0.04,\n",
+      "    \"brilliance\": 0.31\n",
       "}\n"
      ]
     }
@@ -313,11 +313,11 @@
     "    return unique_values, unique_counts, modes, minimums, maximums, averages, medians\n",
     "\n",
     "\n",
-    "filename = \"vivalavida\"\n",
+    "filename = \"waltzoftheflowers\"\n",
     "# Use the function with your audio path\n",
-    "audio_path = f\"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/audio/{filename}.mp3\"\n",
+    "audio_path = f\"/COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_flutter songs/{filename}.mp3\"\n",
     "# Save or print the JSON output\n",
-    "file_path = f\"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/{filename}.json\"\n",
+    "file_path = f\"/COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/{filename}.json\"\n",
     "\n",
     "unique_values, unique_counts, modes, minimums, maximums, averages, medians = analyze_data(file_path)\n",
     "print(\"Unique Value Counts:\", json.dumps(unique_counts, indent=4))\n",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 37,
    "id": "0da28ae4",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated features with note onsets saved back to /Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/vivalavida.json\n"
+      "Updated features with note onsets saved back to /COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/waltzoftheflowers.json\n"
      ]
     }
    ],
@@ -365,9 +365,10 @@
     "\n",
     "    print(f\"Updated features with note onsets saved back to {features_file}\")\n",
     "\n",
+    "\n",
     "# Define the file paths\n",
-    "features_file = \"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/vivalavida.json\"\n",
-    "onsets_file = \"/Users/garfieldgreglim/Documents/Repos/HEAD/rehab_app/rehab_flutter/assets/data/vivalavida_onset.json\"\n",
+    "features_file = \"/COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/waltzoftheflowers.json\"\n",
+    "onsets_file = \"/COLLEGE STUFF/4TH YEAR/Taiwan/Practicum/HEAD Lab Projects/rehab_app/rehab_flutter/assets/data/waltzoftheflowers_onset.json\"\n",
     "\n",
     "# Update the features file with note onsets\n",
     "update_note_onsets(features_file, onsets_file)\n"
@@ -406,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
